# englily

./: .gitignore  meson.build
data/: com.github.jczartek.englily.gschema.xml  meson.build
src/: englily-app.vala  englily-config.vala.in  englily-dict-formatter-service.vala  englily-dict-formatter.vala  englily-dict-service.vala  englily-helper.vala  englily-lexical-unit-parser-states.vala  englily-lexical-unit-parser.vala  englily-list-parser.vala  englily-prefs.vala  englily-string-iterator.vala  englily-win.vala  englily.gresource.xml  englily.plugin  englily.vala  meson.build
src/gtk/: menus.ui
src/lexical-unit/: englily-base-state.vala  englily-end-state-parser.vala  englily-enum-state.vala  englily-istate.vala  englily-parser.vala  englily-symbol-state-parser.vala  englily-tag-state-parser.vala  englily-text-state-parser.vala
tests/: meson.build  test-lexical-unit-parser.vala  test-main.vala  test-string-iterator.vala  testcase.vala
